--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-.navbarImages{
+.navbarImages {
     @apply w-[35px]
+}
+
+.section{
+    @apply w-4/5 m-auto my-8
+}
+
+.carasoul {
+    @apply w-4/5 m-auto bg-cardBorderShadow h-[522px]
 }
