--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@
 .carasoul {
     @apply w-4/5 m-auto bg-cardBorderShadow h-[522px]
 }
+
+.productButtons{
+    @apply w-[285px] text-center shadow-[15px_8px_5px_#97CBDC] px-4 py-2 hover:bg-hover
+}
+
+.productCartbuttons{
+    @apply bg-button text-white px-2 py-1 rounded-md font-semibold w-[106px] hover:bg-navbar
+}
