--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,12 @@
 }
 
 .section{
-    @apply w-4/5 m-auto my-8
+    @apply w-4/5 m-auto my-8 
 }
 
+.sectionHeader{
+    @apply text-[30px] font-semibold
+}
 .carasoul {
     @apply w-4/5 m-auto bg-cardBorderShadow h-[522px]
 }
@@ -22,6 +25,13 @@
     @apply bg-button text-white px-2 py-1 rounded-md font-semibold w-[106px] hover:bg-navbar
 }
 
+.productWrapper{
+    @apply grid grid-cols-4 gap-x-8 gap-y-8
+}
 .productRatingStar{
     @apply hover:text-navbar
+}
+
+.borderBottom{
+    @apply border-b-4 border-cardBorderShadow border-solid pb-4
 }
